--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-line-clamp",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A react component which can help you implememt line-clamp automatically",
   "main": "LineClamp.js",
   "scripts": {
@@ -30,12 +30,12 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.1",
     "gulp-util": "^3.0.7",
-    "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "webpack": "^1.13.0",
-    "webpack-stream": "^3.2.0"
+    "webpack-stream": "^3.2.0",
+    "lodash": "^4.11.2"
   },
   "dependencies": {
-    "lodash": "^4.11.2"
+    "react": "^15.0.2"
   }
 }
