--- a/package.json
+++ b/package.json
@@ -24,22 +24,22 @@
     "line-clamp"
   ],
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.8.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.1",
-    "gulp-util": "^3.0.7",
-    "react-dom": "^15.0.2",
-    "webpack": "^1.13.0",
-    "webpack-stream": "^3.2.0",
-    "lodash": "^4.11.2"
+    "gulp-sass": "^3.1.0",
+    "gulp-util": "^3.0.8",
+    "lodash": "^4.17.4",
+    "react-dom": "^16.0.0",
+    "webpack": "^3.8.1",
+    "webpack-stream": "^4.0.0"
   },
   "dependencies": {
-    "react": "^15.0.2"
+    "react": "^16.0.0"
   }
 }
